# pitdealii

./: CMakeLists.txt  Readme.md  pitdealii.cc
doc/design/: design_doc.tex  gridConvergence.tex  output.tex
doc/design/figures/: gridConvergence.tex  strongscaling.tex  strongscaling2.tex
doc/doxygen/: pitdealii.doxygen
src/: BraidFuncs.cc  BraidFuncs.hh  HeatEquation.hh  HeatEquationImplem.hh  Utilities.hh  pitdealii.cc  reference.cc
test/: test_braid.cc
